<resources>
    <string name="app_name">拔草吧 -0.11</string>
    <string name="yuyan">中文</string>
    <string name="menu_log">登录/注册</string>
    <string name="log">登录</string>
    <string name="menu_change">修改密码</string>
    <string name="menu_logout">退出</string>
    <string name="log_forget">忘记密码</string>
    <string name="log_sign">注册</string>
    <string name="hiht_user">用户名/邮箱</string>
    <string name="hiht_pwd">请输入密码</string>
    <string name="forget_emil">邮箱地址</string>
    <string name="forget_Edcode">输入验证码</string>
    <string name="forget_repwd">确认密码</string>
    <string name="forget_find">找回</string>
    <string name="fotget_getcode">获得验证码</string>
    <string name="sign_user">请输入用户名</string>
    <string name="sign_phone">请输入手机号（可不填）</string>
    <string name="old_pwd">旧密码</string>
    <string name="modify_pwd">新密码</string>
    <string name="modify_ed">请输入</string>
    <string name="complete">完成</string>
    <string name="pop_phone">请输入手机号</string>
    <string name="pop_next">下一步</string>
    <string name="pop_setpwd">设置登录密码（8-16位）</string>
    <string name="pop_all">需包含数字，字母，符号中至少2种元素\n密码长度8-16位</string>
    <string name="pop_sure">确认</string>
    <string name="taxi_cancel">取消行程</string>
    <string name="taxi_msg">请输入信息</string>
    <string name="taxi_pic">请输入图形验证码</string>
    <string name="taxi_renovate">看不清？点击刷新</string>
    <string name="taxi_sens">打车服务</string>
    <string name="adl">警告:</string>
    <string name="adl_title">你确定要退出吗？</string>
    <string name="adl_positive">确定</string>
    <string name="adl_negative">取消</string>
    <string name="adl_msg">很高兴继续为您服务</string>
    <string name="jihuo">未激活</string>
    <string name="yijihuo">已激活</string>
    <string name="adl_twetitle">您还没有激活本应用，很抱歉不能为您提供下面的服务,请去邮箱里激活，如果没有收到请点击重新激活来获取邮件</string>
    <string name="adl_tweMsg">请到邮箱激活后再来点击确认</string>
    <string name="adl_tweMsg_t">你可以在激活后点击侧滑页的服务来激活,如果没有没有收到邮件可个人信息点击重新发送按钮</string>
    <string name="adl_Reactivate">重新发送激活邮件</string>
    <string name="person_user">用户名</string>
    <string name="person_emil">邮箱</string>
    <string name="person_phone">手机号</string>
    <string name="person_logout">退出我的账号</string>
    <string name="person_change">修改信息</string>
    <string name="mainquit_again">再按一次退出程序</string>
    <string name="mainjihuo">你已经激活无需重新激活</string>
    <string name="panNull">你的有没填的,请查实</string>
    <string name="panPwd">密码不能少于6位</string>
    <string name="panTwePwd">两次密码不一致，请核实</string>
    <string name="panEmail">请输入正确的邮箱格式</string>
    <string name="panPhone">请输入正确的手机号</string>
    <string name="panNewAndRenew">新密码不可以和旧密码相同</string>
    <string name="edNull">输入不能为空</string>


    <string name="app_updater_download_later">暂不更新</string>
    <string name="app_updater_download_now">下载安装</string>
    <string name="app_updater_app_market">应用市场</string>
    <string name="app_updater_downloading">正在下载…</string>
    <string name="app_updater_download_failed">下载失败：%d</string>
    <string name="app_updater_dir_not_found">找不到下载目录 - %s</string>
    <string name="app_updater_install">安装</string>
    <string name="app_updater_retry">重试下载</string>
</resources>
