<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@mipmap/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
        android:id="@+id/base"
        layout="@layout/activity_base"/>
    <TextView
        android:id="@+id/log_tv"
        android:layout_below="@id/base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_forget"
        android:layout_marginTop="47dp"
        android:layout_marginLeft="42.5dp"
        android:textSize="26sp"
        android:textColor="#fff"/>
    <RelativeLayout
        android:layout_width="290dp"
        android:layout_height="350dp"
        android:background="@drawable/s"
        android:id="@+id/relativeLayout"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/log_tv"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/forget_edit_usre"
            style="@style/input_Box"
            android:hint="@string/forget_emil"
            android:layout_marginTop="35dp"/>

        <View
            android:layout_below="@id/forget_edit_usre"
            style="@style/separate_View"
            android:id="@+id/view1"/>

        <EditText
            android:id="@+id/forget_edit_code"
            android:layout_below="@+id/view1"
            style="@style/input_Box"
            android:layout_marginTop="10dp"
            android:hint="@string/forget_Edcode"/>

        <TextView
            android:id="@+id/forget_getcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fotget_getcode"
            android:background="@drawable/s"
            android:textSize="10sp"
            android:layout_alignBaseline="@+id/forget_edit_code"
            android:layout_alignBottom="@+id/forget_edit_code"
            android:layout_alignRight="@+id/view3"
            android:layout_alignEnd="@+id/view3"/>

        <View
            android:layout_below="@id/forget_edit_code"
            style="@style/separate_View"
            android:id="@+id/view3"/>

        <EditText
            android:id="@+id/forget_edit_pwd"
            android:layout_below="@id/view3"
            style="@style/input_Box"
            android:hint="@string/hiht_pwd"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_below="@id/forget_edit_pwd"
            style="@style/separate_View"
            android:id="@+id/view"/>

        <EditText
            android:id="@+id/forget_edit_repwd"
            android:layout_below="@id/view"
            style="@style/input_Box"
            android:hint="@string/forget_repwd"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_below="@id/forget_edit_repwd"
            style="@style/separate_View"
            android:id="@+id/view4"/>

        <Button
            android:id="@+id/forget_log"
            android:layout_below="@+id/view4"
            style="@style/confirm_Button"
            android:text="@string/forget_find"/>

    </RelativeLayout>
</RelativeLayout>
</ScrollView>