<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/bg"
    tools:context="com.example.bckj.projectbcb.Activity.LoginActivity">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
     <include
        android:id="@+id/base"
        layout="@layout/activity_base"/>
     <TextView
        android:id="@+id/log_tv"
        android:layout_below="@id/base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_sign"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="42.5dp"
        android:textSize="26sp"
        android:textColor="#fff"/>
        <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_below="@id/log_tv"
        android:layout_width="290dp"
        android:layout_height="370dp"
        android:background="@drawable/s"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">
        <EditText
            android:id="@+id/login_edit_usre"
            style="@style/input_Box"
            android:hint="@string/sign_user"
            android:layout_marginTop="25dp"/>

        <View
            android:layout_below="@id/login_edit_usre"
            style="@style/separate_View"
            android:id="@+id/view4"/>

        <EditText
            android:id="@+id/login_edit_email"
            android:layout_below="@id/login_edit_usre"
            style="@style/input_Box"
            android:hint="@string/forget_emil"
            android:textSize="14sp"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_below="@id/login_edit_email"
            style="@style/separate_View"/>

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_below="@id/login_edit_email"
            style="@style/input_Box"
            android:hint="@string/hiht_pwd"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"/>

        <View
            android:layout_below="@id/login_edit_pwd"
            style="@style/separate_View"/>

        <EditText
            android:id="@+id/login_edit_repwd"
            android:layout_below="@id/login_edit_pwd"
            style="@style/input_Box"
            android:hint="@string/forget_repwd"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <View
            android:layout_below="@id/login_edit_repwd"
            style="@style/separate_View"/>

        <EditText
            android:id="@+id/login_edit_phone"
            android:layout_below="@id/login_edit_repwd"
            style="@style/input_Box"
            android:hint="@string/sign_phone"
            android:layout_marginTop="10dp"
            android:inputType="number"/>

        <View
            android:id="@+id/end_view"
            android:layout_below="@id/login_edit_phone"
            style="@style/separate_View"/>

        <Button
            android:id="@+id/login_login"
            android:layout_below="@id/end_view"
            style="@style/confirm_Button"
            android:text="@string/log_sign"/>

    </RelativeLayout>
</RelativeLayout>
</ScrollView>