<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="com.example.bckj.projectbcb.Activity.ModifyActivity">

    <include
        android:id="@+id/base"
        layout="@layout/activity_base"/>

    <TextView
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:layout_marginRight="15dp"
        android:textSize="23sp"
        android:layout_marginTop="5dp"
        android:textColor="#fff"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:layout_below="@id/base"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:id="@+id/modify_oldpwd"
                style="@style/revise_Text"
                android:text="@string/old_pwd"/>

            <EditText
                android:id="@+id/oldpwd"
                style="@style/revise_Box"
                android:inputType="textPassword"
                android:hint="@string/modify_ed"
                android:layout_toRightOf="@+id/modify_oldpwd"
                android:layout_toEndOf="@+id/modify_oldpwd"/>

        </RelativeLayout>

        <View
            style="@style/long_separate_View"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:id="@+id/modify_newpwd"
                style="@style/revise_Text"
                android:text="@string/modify_pwd"/>

            <EditText
                android:id="@+id/newpwd"
                style="@style/revise_Box"
                android:inputType="textPassword"
                android:hint="@string/modify_ed"
                android:layout_toRightOf="@+id/modify_newpwd"
                android:layout_toEndOf="@+id/modify_newpwd"/>

        </RelativeLayout>

        <View
            style="@style/long_separate_View"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/modify_newrepwd"
                style="@style/revise_Text"
                android:text="@string/forget_repwd"/>

            <EditText
                android:id="@+id/newrepwd"
                style="@style/revise_Box"
                android:hint="@string/modify_ed"
                android:inputType="textPassword"
                android:layout_toRightOf="@+id/modify_newrepwd"
                android:layout_toEndOf="@+id/modify_newrepwd"/>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>