<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="5dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/img_01"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adl"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/img"/>
    <TextView
        android:id="@+id/msg"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:text="@string/adl_twetitle"/>

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adl_positive"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/chongxin"
        android:layout_alignBottom="@+id/chongxin"
        android:layout_alignRight="@+id/msg"
        android:layout_alignEnd="@+id/msg"/>
    <TextView
        android:id="@+id/chongxin"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adl_Reactivate"
        android:textSize="16sp"
        android:layout_below="@+id/msg"
        android:layout_toLeftOf="@+id/ok"
        android:layout_marginRight="12dp"/>
    <!--@string/adl_negative-->
    <TextView
        android:id="@+id/quxiao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/chongxin"
        android:layout_alignBottom="@+id/chongxin"
        android:layout_alignLeft="@+id/msg"
        android:layout_alignStart="@+id/msg"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"/>
</RelativeLayout>