<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/bg">
    <include
        android:id="@+id/base"
        layout="@layout/activity_base"/>
    <ImageView
        android:id="@+id/personhead"
        android:layout_below="@id/base"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/img_04"/>

    <LinearLayout
        android:id="@+id/person_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:id="@+id/urse_rrr"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <TextView
                android:id="@+id/modify_data_name"
                style="@style/revise_Text"
                android:text="@string/person_user"/>

            <EditText
                android:id="@+id/Mdetails_name"
                style="@style/revise_Box"
                android:hint="xubotao"
                android:layout_toRightOf="@+id/modify_data_name"
                android:layout_toEndOf="@+id/modify_data_name"/>
        </RelativeLayout>

        <View
            style="@style/long_separate_View"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/modify_data_phone"
                style="@style/revise_Text"
                android:text="@string/person_phone"/>

            <EditText
                android:id="@+id/Mdetails_phone"
                style="@style/revise_Box"
                android:hint="13051672112"
                android:layout_toRightOf="@+id/modify_data_phone"
                android:layout_toEndOf="@+id/modify_data_phone"/>

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/modify_finish"
        style="@style/confirm_Button"
        android:layout_alignParentBottom="true"
        android:text="@string/complete"/>

</RelativeLayout>
